--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -4,7 +4,22 @@ files:
   - source: /
     destination: /home/ec2-user/app
 hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ec2-user
+
   AfterInstall:
     - location: scripts/start_server.sh
+      timeout: 300
+      runas: ec2-user
+
+  ApplicationStart:
+    - location: scripts/application_start.sh
+      timeout: 300
+      runas: ec2-user
+
+  ValidateService:
+    - location: scripts/validate_service.sh
       timeout: 300
       runas: ec2-user
