--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,12 @@ hooks:
       timeout: 300
       runas: ec2-user
 
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ec2-user
+      ignoreErrors: true
+
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
